--- a/src/pages/Movie.css
+++ b/src/pages/Movie.css
@@ -53,4 +53,8 @@
     line-height: 1.4rem;
   }
 
- 
+  @media screen and (max-width: 600px) {
+    .movie-page .movie-card img{
+        max-width:80%;
+    }
+  }
